--- a/public/chat.html
+++ b/public/chat.html
@@ -1,50 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <title>Chat</title>
+    <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
+    <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'/>
+    <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet'/>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
 
-    <link rel="stylesheet" href="style.css" />
-    <title>Chat app</title>
+    <link rel="stylesheet" href="chat.css"/>
+    <script type="text/javascript" src="chat.js"></script>
   </head>
-  <div class="main">
-    <div class="name">
-      <span><i class="far fa-user"></i></span>
-      <input
-        type="text"
-        id="name-input"
-        class="name-input"
-        placeholder="Your Name Here"
-        maxlength="20"
-      />
-    </div>
-
-    <ul class="message-container" id="message-container">
-    </ul>
-
-    <form class="message-form" id="message-form">
-      <input
-        type="text"
-        name="message"
-        id="message-input"
-        class="message-input"
-        placeholder="Your message here"
-      />
-         
-        <button type="submit" class="send-button" id="send-button">
-        send <span><i class="fas fa-paper-plane"></i></span>
-      </button>
-      <h3 class="clients-total" id="client-total">Total clients: 2</h3>
-
-    </form>
-  </div>
-
-  <script src="/socket.io/socket.io.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"
-    integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg=="
-    crossorigin="anonymous"
-  ></script>
-  <script src="main.js"></script>
-  </body>
+  <body></body>
 </html>
